@@ -1,30 +1,34 @@
 # $Id$
 
-trim <- function(s, recode.factor=TRUE)
+trim <- function(s, recode.factor=TRUE, ...)
   UseMethod("trim", s)
 
-trim.default <- function(s, recode.factor=TRUE)
+trim.default <- function(s, recode.factor=TRUE, ...)
   s
 
-trim.character <- function(s, recode.factor=TRUE)
+trim.character <- function(s, recode.factor=TRUE, ...)
 {
   s <- sub(pattern="^ +", replacement="", x=s)
   s <- sub(pattern=" +$", replacement="", x=s)
   s
 }
 
-trim.factor <- function(s, recode.factor=TRUE)
+trim.factor <- function(s, recode.factor=TRUE, ...)
 {
   levels(s) <- trim(levels(s))
-  if(recode.factor) s <- reorder.factor(s, sort=sort)
+  if(recode.factor) {
+    dots <- list(x=s, ...)
+    if(is.null(dots$sort)) dots$sort <- sort
+    s <- do.call(what=reorder.factor, args=dots)
+  }
   s
 }
 
-trim.list <- function(s, recode.factor=TRUE)
-  lapply(s, trim, recode.factor=recode.factor)
+trim.list <- function(s, recode.factor=TRUE, ...)
+  lapply(s, trim, recode.factor=recode.factor, ...)
 
-trim.data.frame <- function(s, recode.factor=TRUE)
+trim.data.frame <- function(s, recode.factor=TRUE, ...)
 {
-  s[] <- trim.list(s, recode.factor=recode.factor)
+  s[] <- trim.list(s, recode.factor=recode.factor, ...)
   s
 }
