@@ -6,11 +6,13 @@
  related objects.
 }
 \usage{
-trim(s, recode.factor=TRUE)
+trim(s, recode.factor=TRUE, \ldots)
 }
 \arguments{
   \item{s}{object to be processed}
-  \item{recode.factor}{Should levels of a factor be recoded, see below}
+  \item{recode.factor}{should levels of a factor be recoded, see below}
+  \item{\ldots}{arguments passed to other methods, currently only to
+    \code{\link{reorder.factor}} for factors}
 }
 
 \details{
@@ -20,19 +22,22 @@ while method for character \code{s} trims its elements and method for
 factor \code{s} trims \code{\link{levels}}. There are also methods for
 \code{list} and \code{data.frame}.
 
-Trimming character strings can change the sort order in some
-locales.  For factors, this can affect the coding of levels.  By
-default, factor levels are recoded to match the trimmed sort order, but
-this can be disabled by setting \code{recode.factor=FALSE}.
+Trimming character strings can change the sort order in some locales.
+For factors, this can affect the coding of levels. By default, factor
+levels are recoded to match the trimmed sort order, but this can be
+disabled by setting \code{recode.factor=FALSE}. Recoding is done with
+\code{\link{reorder.factor}}.
 
 }
 \value{
   \code{s} with all leading and trailing spaces removed in its elements.
 }
-\author{ Gregory R. Warnes \email{warnes@bst.rochester.edu}  with
+\author{Gregory R. Warnes \email{warnes@bst.rochester.edu}  with
   contributions by Gregor Gorjanc}
 \seealso{ \code{\link[base]{sub}}, \code{\link[base]{gsub}} as well as
-  argument \code{strip.white} in \code{\link{read.table}}}
+  argument \code{strip.white} in \code{\link{read.table}} and
+  \code{\link{reorder.factor}}
+}
 \examples{
 s <- "    this is an example string    "
 trim(s)
@@ -43,17 +48,14 @@ levels(f)
 trim(f)
 levels(trim(f))
 
-trim(f,recode.factor=FALSE)
-levels(trim(f,recode.factor=FALSE))
-
+trim(f, recode.factor=FALSE)
+levels(trim(f, recode.factor=FALSE))
 
 l <- list(s=rep(s, times=6), f=f, i=1:6)
 trim(l)
 
 df <- as.data.frame(l)
 trim(df)
-
-
 }
 \keyword{manip}
 \keyword{character}
